fix jdk8 compile